[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py39"]

[tool.coverage.report]
exclude_lines = ["raise NotImplementedError", "TYPE_CHECKING"]
fail_under = 100
show_missing = true

[tool.coverage.run]
source = ["package_name"]

[tool.isort]
known_first_party = "package_name,examples,tests"
multi_line_output = 3
profile = "black"

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
follow_imports = "silent"
ignore_missing_imports = true
no_implicit_optional = true
platform = "linux"
python_version = "3.10"
show_error_codes = true
strict_equality = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.poetry]
name = "package_name"
version = "0.0.1"
description = "DESCRIPTION GOES HERE"
readme = "README.md"
authors = ["Aaron Bach <bachya1208@gmail.com>"]
license = "MIT"
repository = "https://github.com/bachya/package_name"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.poetry.dependencies]
aiohttp = ">=3.8.0"
python = "^3.9.0"

[tool.poetry.group.dev.dependencies]
aresponses = "^2.1.6"
bandit = "^1.7.5"
black = "^23.9.1"
blacken-docs = "^1.16.0"
codespell = "^2.2.6"
coverage = {version = "^7.3", extras = ["toml"]}
darglint = "^1.8.1"
isort = "^5.12.0"
mypy = "^1.6.0"
pre-commit = "^3.5.0"
pre-commit-hooks = "^4.5.0"
pylint = "^3.0.1"
pytest = "^7.4.2"
pytest-aiohttp = "^1.0.5"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pyupgrade = "^3.15.0"
ruff = "^0.1.1"
safety = "^2.3.1"
vulture = "^2.10"
yamllint = "^1.32.0"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/bachya/package_name/issues"
Changelog = "https://github.com/bachya/package_name/releases"

[tool.pylint.BASIC]
expected-line-ending-format = "LF"

[tool.pylint.DESIGN]
max-attributes = 20

[tool.pylint.FORMAT]
max-line-length = 88

[tool.pylint.MASTER]
ignore = [
  "tests",
]
load-plugins = [
  "pylint.extensions.bad_builtin",
  "pylint.extensions.code_style",
  "pylint.extensions.docparams",
  "pylint.extensions.docstyle",
  "pylint.extensions.empty_comment",
  "pylint.extensions.overlapping_exceptions",
  "pylint.extensions.typing",
]

[tool.pylint."MESSAGES CONTROL"]
# Reasons disabled:
# unnecessary-pass - This can hurt readability
disable = [
  "unnecessary-pass"
]

[tool.pylint.REPORTS]
score = false

[tool.pylint.SIMILARITIES]
# Minimum lines number of a similarity.
# We set this higher because of some cases where V2 and V3 functionality are
# similar, but abstracting them isn't feasible.
min-similarity-lines = 8

# Ignore comments when computing similarities.
ignore-comments = true

# Ignore docstrings when computing similarities.
ignore-docstrings = true

# Ignore imports when computing similarities.
ignore-imports = true

[tool.vulture]
min_confidence = 80
paths = ["package_name", "tests"]
verbose = false
