[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py39"]

[tool.coverage.report]
exclude_lines = ["raise NotImplementedError", "TYPE_CHECKING"]
fail_under = 100
show_missing = true

[tool.coverage.run]
source = ["package_name"]

[tool.isort]
known_first_party = "package_name,examples,tests"
multi_line_output = 3
profile = "black"

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
follow_imports = "silent"
ignore_missing_imports = true
no_implicit_optional = true
platform = "linux"
python_version = "3.10"
show_error_codes = true
strict_equality = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.poetry]
name = "package_name"
version = "0.0.1"
description = "DESCRIPTION GOES HERE"
readme = "README.md"
authors = ["Aaron Bach <bachya1208@gmail.com>"]
license = "MIT"
repository = "https://github.com/bachya/package_name"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.poetry.dependencies]
aiohttp = ">=3.9.0"
certifi = ">=2023.7.22"
frozenlist = "^1.4.1"
python = ">=3.10,<=3.12"
urllib3 = ">=1.26.18"
yarl = ">=1.9.2"

[tool.poetry.group.dev.dependencies]
GitPython = ">=3.1.35"
Pygments = ">=2.15.0"
aresponses = "^3.0.0"
blacken-docs = "^1.16.0"
codespell = "^2.3.0"
coverage = {version = "^7.5", extras = ["toml"]}
darglint = "^1.8.1"
isort = "^5.13.2"
mypy = "^1.10.0"
pre-commit = "^3.7.1"
pre-commit-hooks = "^4.6.0"
pylint = "^3.2.2"
pytest = "^8.2.2"
pytest-aiohttp = "^1.0.5"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
pyupgrade = "^3.15.2"
pyyaml = "^6.0.1"
requests = "^2.32.3"
ruff = "^0.4.8"
vulture = "^2.11"
yamllint = "^1.35.1"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/bachya/package_name/issues"
Changelog = "https://github.com/bachya/package_name/releases"

[tool.pylint.BASIC]
expected-line-ending-format = "LF"

[tool.pylint.DESIGN]
max-attributes = 20

[tool.pylint.FORMAT]
max-line-length = 88

[tool.pylint.MASTER]
ignore = [
  "tests",
]
load-plugins = [
  "pylint.extensions.bad_builtin",
  "pylint.extensions.code_style",
  "pylint.extensions.docparams",
  "pylint.extensions.docstyle",
  "pylint.extensions.empty_comment",
  "pylint.extensions.overlapping_exceptions",
  "pylint.extensions.typing",
]

[tool.pylint."MESSAGES CONTROL"]
# Reasons disabled:
# unnecessary-pass - This can hurt readability
disable = [
  "unnecessary-pass"
]

[tool.pylint.REPORTS]
score = false

[tool.pylint.SIMILARITIES]
# Minimum lines number of a similarity.
# We set this higher because of some cases where V2 and V3 functionality are
# similar, but abstracting them isn't feasible.
min-similarity-lines = 8

# Ignore comments when computing similarities.
ignore-comments = true

# Ignore docstrings when computing similarities.
ignore-docstrings = true

# Ignore imports when computing similarities.
ignore-imports = true

[tool.vulture]
min_confidence = 80
paths = ["package_name", "tests"]
verbose = false
